tests/security/taintedInstanceCallWithNoTypes/output.txt
ERROR: TaintedData - input.hack:7:6 - Data from a URL query string found its way to an HTML tag